# CommitLLM

./: .envrc  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  flake.nix  roadmap.md
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 9qa4c94rswp05pi33cw8djmr481xfmsb-source  vgabdf5kpn2zg8m34iiiywyy23m10ak7-source
.github/workflows/: pages.yml
article/: commitllm.md  verilm.md
crates/verilm-core/: Cargo.toml
crates/verilm-core/fuzz/: Cargo.toml  README.md
crates/verilm-core/fuzz/fuzz_targets/: decompress.rs  deserialize_compact_batch.rs  deserialize_key.rs  deserialize_trace.rs
crates/verilm-keygen/: Cargo.toml
crates/verilm-keygen/src/: lib.rs  main.rs
crates/verilm-keygen/tests/: safetensors_keygen.rs
crates/verilm-prover/: Cargo.toml
crates/verilm-py/: Cargo.toml  pyproject.toml
crates/verilm-py/src/: lib.rs
crates/verilm-py/tests/: test_bytes_path.py  test_canonical_sample.py  test_deserialize_v4_audit.py
crates/verilm-test-vectors/: Cargo.toml
crates/verilm-test-vectors/src/: lib.rs
crates/verilm-test-vectors/tests/: adversarial_forgery.rs  attack_scenarios.rs  attention_level_c.rs  batch_verification.rs  challenge_derivation.rs  differential.rs  fiat_shamir_soundness.rs  golden_conformance.rs  kv_chain_binding.rs  kv_provenance_chain.rs  manifest_binding.rs  margin_certificates.rs  perf_baseline.rs  property_invariants.rs  sampling_replay.rs  token_id_binding.rs  toy_model.rs  transcript_surgery.rs  v3_full_binding.rs  weight_chain.rs  weight_chain_adversarial.rs
crates/verilm-tui/: Cargo.toml
crates/verilm-tui/src/: app.rs  main.rs
crates/verilm-verify/: Cargo.toml
crates/verilm-verify/src/: canonical.rs  client.rs  corridor.rs  lib.rs  main.rs
crates/verilm-verify/tests/: audit.rs  bench_gate_a.rs  boundary_fuzz.rs  canonical.rs  client.rs  corridor_amplification.rs  cross_version.rs  gen_fixtures.rs  hardening_gate.rs  v4_e2e.rs
crates/vi-core/: Cargo.toml
crates/vi-keygen/: Cargo.toml
crates/vi-keygen/src/: lib.rs  main.rs
crates/vi-keygen/tests/: safetensors_keygen.rs
crates/vi-prover/: Cargo.toml
crates/vi-py/: Cargo.toml
crates/vi-py/src/: lib.rs
crates/vi-test-vectors/: Cargo.toml
crates/vi-verify/: Cargo.toml
docs/: challenge-protocol.md
docs/design/: decode-boundary-spike.md  deterministic-attention-spec.md
kernels/: deterministic_attention.cu  deterministic_attention_v1.cu  deterministic_attention_v2_score.cu  deterministic_attention_v3_softmax.cu  tree_reduce.cu
lean/: VerifiedInference.lean  lake-manifest.json  lakefile.toml
lean/VerifiedInference/: AccumulatorBound.lean  ApproximateAttentionReplay.lean  AttentionBounds.lean  AuditTiers.lean  Basic.lean  CanonicalOps.lean  CanonicalProtocol.lean  CanonicalProtocolSound.lean  ConcreteShell.lean  CrossLayerConstraint.lean  EndToEnd.lean  ExpLUT.lean  Freivalds.lean  GameToFreivalds.lean  HashCommitment.lean  IndependentChecks.lean  LayerDeterminism.lean  MerkleAdversarial.lean  MerkleTree.lean  ModelIdentitySoundness.lean  MultiVector.lean  PrecomputedFreivalds.lean  Protocol.lean  ProtocolComposition.lean  ProtocolParams.lean  ReadmeKVProvenance.lean  ReadmeShell.lean  Requantization.lean  SamplingBound.lean  SecurityGame.lean  SiLU.lean  SoftmaxBound.lean  Storage.lean  StorageReconstruction.lean  TierBounds.lean  WeightBinding.lean
paper/: main.pdf.ots  main.typ  refs.bib
paper/benchmarks/: PUBLICATION_SNAPSHOT_2026-04-01.md  protocol_bench_toy.txt  verifier_bench.txt
redteam/: README.md  attack_matrix.md
redteam/modal/: measure_contraction.py  measure_corridor_backends.py  measure_corridor_precision.py  measure_sensitivity.py  measure_sensitivity_v2.py  simulate_int16_boundary.py  simulate_perhead_boundary.py  test_adversarial.py  test_freshness_gap.py  test_model_substitution.py
research/: README.md  adversarial-methodology.md  attention-gap.md  decode-boundary.md
scripts/: local_smoke_test.py  modal_bench_capture.py  modal_bench_gate_a5.py  modal_bench_gate_b.py  modal_bench_gate_c.py  modal_serve.py  modal_test_capture_stability.py  modal_test_e2e.py  modal_test_e2e_v4.py  modal_test_sidecar.py  modal_test_sync_equiv.py
scripts/modal/: _pins.py  bench_ab_accumulator.py  bench_ab_overhead.py  bench_capture.py  bench_capture_overhead_ab.py  bench_captured_logits_economics.py  bench_commit_phases.py  bench_det_attn_v1_v2.py  bench_det_attn_v2_v3.py  bench_det_attn_v3_v4.py  bench_e2e_v4.py  bench_exact_attention.py  bench_gate_a5.py  bench_gate_b.py  bench_gate_c.py  bench_hooks_overhead.py  bench_score_witness.py  bench_tolerance_sweep.py  calibrate_beta.py  debug_capture_mismatch.py  demo_llama_e2e.py  diag_bias_check.py  diag_budgeted_certification.py  diag_certification_quality.py  (+39 more)
sidecar/: setup.py
site/: config.toml
(+87 files in other folders)
