[package]
name = "verilm-py"
version = "0.1.0"
edition = "2021"

[lib]
name = "verilm_rs"
crate-type = ["cdylib"]

[dependencies]
verilm-core = { path = "../verilm-core" }
verilm-prover = { path = "../verilm-prover" }
verilm-verify = { path = "../verilm-verify" }
pyo3 = { version = "0.28", features = ["extension-module"] }
serde_json = "1"
hex = "0.4"
