[package]
name = "verilm-tui"
version = "0.1.0"
edition = "2021"
description = "Interactive TUI for VeriLM verification debugging and demos"

[[bin]]
name = "verilm-tui"
path = "src/main.rs"

[dependencies]
verilm-core = { path = "../verilm-core" }
verilm-verify = { path = "../verilm-verify" }

# TUI framework
ratatui = { version = "0.29", features = ["all-widgets"] }
crossterm = "0.28"

# Async runtime for live updates
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"

# WebSocket client for live server connection
tokio-tungstenite = { version = "0.24", optional = true }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Logging/tracing
tracing = "0.1"
tracing-subscriber = "0.3"

# Error handling
anyhow = "1"
thiserror = "1"

# Time formatting for logs
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[features]
default = ["live"]
live = ["tokio-tungstenite"]  # Connect to live server
demo = []                      # Run standalone demo
