[package]
name = "verilm-verify"
version = "0.1.0"
edition = "2021"

[dependencies]
verilm-core = { path = "../verilm-core" }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
bincode = "1.3"
hex = "0.4"
sha2 = "0.10"

[dev-dependencies]
verilm-test-vectors = { path = "../verilm-test-vectors" }
verilm-prover = { path = "../verilm-prover" }
