[package]
name = "verilm-verify"
version = "0.1.0"
edition = "2021"

[dependencies]
verilm-core = { path = "../verilm-core" }
bincode = "1.3"
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
half = "2.7"

[dev-dependencies]
verilm-test-vectors = { path = "../verilm-test-vectors" }
verilm-prover = { path = "../verilm-prover" }
zstd = "0.13"
hex = "0.4"
rand = "0.8"
rand_chacha = "0.3"
