[package]
name = "vi-keygen"
version = "0.1.0"
edition = "2021"

[dependencies]
vi-core = { path = "../vi-core" }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
safetensors = "0.4"
memmap2 = "0.9"
rand = "0.8"
rand_chacha = "0.3"
hex = "0.4"
getrandom = "0.2"

[dev-dependencies]
vi-test-vectors = { path = "../vi-test-vectors" }
tempfile = "3"
