[package]
name = "vi-py"
version = "0.1.0"
edition = "2021"

[lib]
name = "verilm_rs"
crate-type = ["cdylib"]

[dependencies]
vi-core = { path = "../vi-core" }
vi-test-vectors = { path = "../vi-test-vectors" }
vi-verify = { path = "../vi-verify" }
pyo3 = { version = "0.28", features = ["extension-module"] }
serde_json = "1"
hex = "0.4"
